# xcicd

./: .gitignore  README.md  pyproject.toml
.github/actions/slack-failure/: action.yaml
.github/workflows/: ci.yaml  scan.yaml
scripts/: xcicd-bdeleter.py  xcicd-bscanner.py
src/xcicd/: __init__.py  bscanner.py
src/xcicd/artifact/: __init__.py  branch.py
src/xcicd/github/: api_mgr.py  curl_mgr.py  git_mgr.py
src/xcicd/linux/: __init__.py  scall.py
tests/: test_api_mgr.py  test_branch.py  test_bscanner.py  test_curl_mgr.py  test_scall.py  test_xcicd_bscanner_nr.py
